Fix task routes: pagination, filtering, and response shapes
- getTaskApi: add state/taskClass/projectId/page/limit filters with pagination, return {data,total}
- getTaskCategories: return [{taskClass}] list of objects (not string list)
- taskDetails: accept taskId field (TS uses taskId not id)

https://claude.ai/code/session_01NPRfAcmeBtKveicCzE8UoM